2002-02-22  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* imagewin/ibuf8.cc: used memcpy() on Solaris for ibuf8::copy8

2002-02-22  Jeff Freedman  <jeff@amy.nerble.net>

	* gamemap.cc (Game_map): Always look through all the terrains to
	see if one needs to be saved when map-editing.
	* gamewin.cc: Okay to double-click without pathfinding if map-editing.
	* gamedat.cc: If editing, it's okay if gamedat files don't exist
	when saving.
	* usecode/ucinternal.cc: Assume newly-developed games will have a
	keyring.
	* tools/ipack.cc,shapes/pngio.cc: Get transparency from .png when
	adding to the .vga file.

2002-02-21  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* Makefile.am: directory order again. tools depends on shapes&imagewin

2002-02-21  Darke  <darkepaw@users.sourceforge.net>
	* usecode/ucxt/Makefile.am: Fixed a problem with it not creating
	the intrinsics data files.

2002-02-20  Jeff Freedman  <jsf@usf-cf-x86-linux-1>

	* shapes/vgafile.h (public): Public encode_rle() added.
	* tools/ipack.cc:  Coding 'Create()'.

2002-02-20  Ryan Nunn  <triforce@merlin.net.au>
	* actors.cc : Fixing Serpent Isle change of portrait bug. Polymorphing 
	  to 721 or 989 will now polymorph to the Avatar's actual shape.
	* gumps/Face_stats.cc : No stat bars for non 'party' npcs. Fixes the
	  Forsythe status bar crash.
	* game.cc : Fixing int to bool conversion
	* files/Flex.cc : Namespace

2002-02-20  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc: Fiddling with finding position for dead bodies.
	* exult.cc: Get_click() has a 'drag_ok' parameter, defaulting to false.

2002-02-17  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* mapedit/PhotoshopShapePlugin.zip: fixed bug with photoshop 6.0

2002-02-17  Jeff Freedman  <jeff@amy.nerble.net>

	* exult.cc: Allow dragging and closing gumps when selecting with
	the green cross-hair mouse. 

	* objs/barge.cc (Barge_object): Recheck for boat in 'gather',